# bricks

./: README.md  TODO.md  pyproject.toml
docs/: OUTLINE.md  SPEC.md  new_command.md  publish.md  test_drive.md
sleepybricks/: __init__.py  main.py
sleepybricks/cli/: __init__.py  runtime.py
sleepybricks/cli/commands/: __init__.py  dash_links.py  pull.py  run_job.py  secrets.py  sql.py  workspace_folder.py
sleepybricks/core/: __init__.py  config.py  credentials.py  logging.py  sleepy_params.py  workspace.py
sleepybricks/utils/: __init__.py  formatting.py
tests/: conftest.py  fakes.py
tests/cli/: test_run_job.py  test_secrets.py  test_sql.py  test_workspace_and_dash.py
tests/core/: test_config.py  test_credentials.py  test_sleepy_params.py
tools/: format.sh  test.sh
