[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "sleepybricks"
version = "1.1.0"
description = "Run databricks operations across multiple workspaces from a single terse CLI."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = ["databricks", "cli", "workspaces", "devops"]
authors = [{ name = "Isaac Yep", email = "anthonybenchyep@gmail.com" }]
dependencies = [
  "databricks-sdk>=0.57.0",
  "pyyaml>=6.0",
  "tabulate>=0.9.0",
  "typer>=0.16.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.10.0",
  "pytest>=8.3.0",
  "shfmt-py>=3.8.0",
]

[project.urls]
repository = "https://github.com/anthonybench/bricks"

[project.scripts]
sleepybricks = "sleepybricks.main:main"

[tool.poetry]
packages = [{ include = "sleepybricks" }]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "*.py"
